--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -87,3 +87,25 @@ jobs:
         run: Get-ScheduledTask -TaskName RunnerMachineProvisioner | Export-ScheduledTask
       - name: dir /a C:\actions\runner-provisioner-Windows
         run: dir /a C:\actions\runner-provisioner-Windows
+      - name: Take screenshot
+        shell: powershell
+        run: |
+          Add-Type -AssemblyName System.Windows.Forms,System.Drawing
+          $screens = [Windows.Forms.Screen]::AllScreens
+          $top    = ($screens.Bounds.Top    | Measure-Object -Minimum).Minimum
+          $left   = ($screens.Bounds.Left   | Measure-Object -Minimum).Minimum
+          $right  = ($screens.Bounds.Right  | Measure-Object -Maximum).Maximum
+          $bottom = ($screens.Bounds.Bottom | Measure-Object -Maximum).Maximum
+          $bounds   = [Drawing.Rectangle]::FromLTRB($left, $top, $right, $bottom)
+          $bmp      = New-Object System.Drawing.Bitmap ([int]$bounds.width), ([int]$bounds.height)
+          $graphics = [Drawing.Graphics]::FromImage($bmp)
+          $graphics.CopyFromScreen($bounds.Location, [Drawing.Point]::Empty, $bounds.size)
+          $bmp.Save("screenshot.png")
+          $graphics.Dispose()
+          $bmp.Dispose()
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v4
+        with:
+          name: screenshot.png
+          path: screenshot.png
+          retention-days: 2
