--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -108,4 +108,5 @@ jobs:
         with:
           name: screenshot.png
           path: screenshot.png
+          compression-level: 0
           retention-days: 2
