--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Invoke-RestMethod http://169.254.169.254/...
         shell: powershell
-        run: Invoke-RestMethod -Headers @{"Metadata"="true"} -Method GET -Uri "http://169.254.169.254/metadata/instance?api-version=2021-12-13"
+        run: Invoke-RestMethod -Headers @{"Metadata"="true"} -Method GET -Uri "http://169.254.169.254/metadata/instance?api-version=2021-12-13" | ConvertTo-Json -Depth 64
       - name: Get-PSDrive
         shell: powershell
         run: Get-PSDrive
