Add more detail about the OS; run bcdedit

--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -43,6 +43,8 @@ jobs:
       - name: Get-WmiObject Win32_VideoController
         shell: powershell
         run: Get-WmiObject Win32_VideoController
+      - name: bcdedit
+        run: bededit
       - name: dir /a
         run: dir /a
       - name: dir /a c:\
