Fix bcdedit typo

--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -44,7 +44,7 @@ jobs:
         shell: powershell
         run: Get-WmiObject Win32_VideoController
       - name: bcdedit
-        run: bededit
+        run: bcdedit
       - name: dir /a
         run: dir /a
       - name: dir /a c:\
