--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -175,6 +175,8 @@ jobs:
           path: screenshot.png
           compression-level: 0
           retention-days: 2
+      - name: winget list
+        run: winget list
       - name: Get-WmiObject -Class Win32_Product | Select-Object -Property Name,Version | Sort-Object -Property Name,Version
         shell: powershell
         # Sadly this step is extremely slow because there's a ton of
