--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -175,6 +175,9 @@ jobs:
           path: screenshot.png
           compression-level: 0
           retention-days: 2
+      - name Add-AppxPackage -RegisterByFamilyName -MainPackage Microsoft.DesktopAppInstaller_8wekyb3d8bbwe (install winget)
+        shell: powershell
+        run: Add-AppxPackage -RegisterByFamilyName -MainPackage Microsoft.DesktopAppInstaller_8wekyb3d8bbwe
       - name: winget list
         run: winget list
       - name: Get-WmiObject -Class Win32_Product | Select-Object -Property Name,Version | Sort-Object -Property Name,Version
