Add where winget and nuget

--- a/.github/workflows/query_windows.yml
+++ b/.github/workflows/query_windows.yml
@@ -70,6 +70,10 @@ jobs:
         run: dir /a c:\runners
       - name: set
         run: set
+      - name: where winget
+        run: where winget
+      - name: where nuget
+        run: where nuget
       - name: tasklist /v
         run: tasklist /v
       - name: tasklist /svc
